fixed versioning error for firebase

--- a/Service4U/build.gradle
+++ b/Service4U/build.gradle
@@ -5,14 +5,18 @@ buildscript {
     repositories {
         google()
         jcenter()
+        maven {
+            url  "https://dl.bintray.com/android/android-tools"
+        }
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.1.4'
-        
+       // classpath 'com.android.tools.build:gradle:3.1.4'
 
+        classpath 'com.android.tools.build:gradle:3.1.2'
+        classpath 'com.google.gms:google-services:4.0.1'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
-        classpath 'com.google.gms:google-services:3.1.1'
+       // classpath 'com.google.gms:google-services:3.1.1'
     }
 }
 
