--- a/Service4U/app/build.gradle
+++ b/Service4U/app/build.gradle
@@ -24,8 +24,8 @@ dependencies {
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     implementation 'com.google.firebase:firebase-auth:11.6.0'
     implementation 'com.android.support:design:28.0.0'
-    //implementation 'com.google.firebase:firebase-admin:6.5.0'
-    //implementation 'com.google.firebase:firebase-database:11.8.0'
+    implementation 'com.google.firebase:firebase-admin:6.5.0'
+    implementation 'com.google.firebase:firebase-database:11.8.0'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
