--- a/Service4U/app/build.gradle
+++ b/Service4U/app/build.gradle
@@ -22,14 +22,18 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'com.android.support:appcompat-v7:28.0.0'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
-    implementation 'com.google.firebase:firebase-auth:11.6.0'
     implementation 'com.android.support:design:28.0.0'
-    implementation 'com.google.firebase:firebase-admin:6.5.0'
-    implementation 'com.google.firebase:firebase-database:11.8.0'
+
+    implementation 'com.google.firebase:firebase-auth:16.0.3'
+    //implementation 'com.google.firebase:firebase-admin:6.5.0'
+    implementation 'com.google.firebase:firebase-database:16.0.1'
     implementation 'com.google.firebase:firebase-core:16.0.4'
+
+    annotationProcessor 'com.google.auto.value:auto-value:1.4'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
 }
 
 apply plugin: 'com.google.gms.google-services'
+
