--- a/Service4U/build.gradle
+++ b/Service4U/build.gradle
@@ -6,14 +6,16 @@ buildscript {
         google()
         jcenter()
         maven {
-            url  "https://dl.bintray.com/android/android-tools"
+            //url  "https://dl.bintray.com/android/android-tools"
+            url "https://maven.google.com/"
         }
+        mavenCentral()
     }
     dependencies {
        // classpath 'com.android.tools.build:gradle:3.1.4'
 
         classpath 'com.android.tools.build:gradle:3.1.4'
-        classpath 'com.google.gms:google-services:4.0.1'
+        classpath 'com.google.gms:google-services:3.2.1'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
        // classpath 'com.google.gms:google-services:3.1.1'
@@ -30,3 +32,5 @@ allprojects {
 task clean(type: Delete) {
     delete rootProject.buildDir
 }
+
+
