basic functionality of deliverable 2

--- a/Service4U/app/src/main/AndroidManifest.xml
+++ b/Service4U/app/src/main/AndroidManifest.xml
@@ -20,8 +20,11 @@
             android:name=".CreateAccountActivity"
             android:label="@string/title_activity_create_account"
             android:theme="@style/AppTheme.NoActionBar" />
-        <activity android:name=".WelcomeActivity" />
-        <activity android:name=".MyAccountActivity"></activity>
+        <activity android:name=".MyAccountActivity" />
+        <activity
+            android:name=".ServicesActivity"
+            android:label="@string/title_activity_services"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
     </application>
 
 </manifest>
