--- a/Service4U/app/build.gradle
+++ b/Service4U/app/build.gradle
@@ -32,6 +32,7 @@ dependencies {
     annotationProcessor 'com.google.auto.value:auto-value:1.4'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
+    androidTestImplementation 'com.android.support.test:rules:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
 }
 
