--- a/Service4U/app/src/main/AndroidManifest.xml
+++ b/Service4U/app/src/main/AndroidManifest.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="ca.uottawa.service4u">
-
+    <uses-permission android:name="android.permission.INJECT_EVENTS"/>
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/app_logo1"
+        android:icon="@mipmap/logo_2"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/app_logo1_round"
+        android:roundIcon="@mipmap/logo_2_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity android:name=".MainActivity">
