add book a job form

--- a/Service4U/app/src/main/AndroidManifest.xml
+++ b/Service4U/app/src/main/AndroidManifest.xml
@@ -39,7 +39,11 @@
         <activity
             android:name=".BookJob"
             android:label="Book A Job" />
-        <activity android:name=".AvailabilityActivity"></activity>
+        <activity android:name=".AvailabilityActivity" />
+        <activity
+            android:name=".JobOptionsActivity"
+            android:label="@string/title_activity_job_options"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
     </application>
 
 </manifest>
