--- a/Service4U/app/src/main/AndroidManifest.xml
+++ b/Service4U/app/src/main/AndroidManifest.xml
@@ -4,9 +4,9 @@
     <uses-permission android:name="android.permission.INJECT_EVENTS"/>
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/logo_2"
+        android:icon="@mipmap/s4u_logo"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/logo_2_round"
+        android:roundIcon="@mipmap/s4u_logo_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity android:name=".MainActivity">
