--- a/Service4U/app/build.gradle
+++ b/Service4U/app/build.gradle
@@ -13,6 +13,7 @@ android {
     buildTypes {
         release {
             minifyEnabled false
+            useProguard false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
@@ -27,6 +28,7 @@ dependencies {
     implementation 'com.android.support:appcompat-v7:28.0.0'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     implementation 'com.android.support:design:28.0.0'
+    implementation 'com.android.support:support-annotations:28.0.0'
 
     implementation 'com.google.firebase:firebase-auth:16.0.3'
     //implementation 'com.google.firebase:firebase-admin:6.5.0'
