--- a/Service4U/.circleci/config.yml
+++ b/Service4U/.circleci/config.yml
@@ -7,7 +7,8 @@ jobs:
     environment:
       JVM_OPTS: -Xmx3200m
     steps:
-      - checkout
+      - checkout:
+          path: ~/home-repair-services-app
       - restore_cache:
           key: jars-{{ checksum "build.gradle" }}-{{ checksum  "app/build.gradle" }}
       - run:
